# BRAID

./: LICENSE.md  README.md  requirements.txt
source/: pyproject.toml  setup.py
source/BRAID/: BRAIDModel.py  BRAIDModelDoc.md  MainModel.py  RNNModel.py  RegressionModel.py  __init__.py
source/BRAID/example/: BRAID_tutorial.ipynb  BRAID_tutorial.py
source/BRAID/tools/: LSSM.py  LinearMapping.py  MatHelper.py  SSM.py  abstract_classes.py  evaluation.py  file_tools.py  model_base_classes.py  parse_tools.py  plot.py  sim_tools.py  tf_losses.py  tf_tools.py  tools.py
